examples/kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lewaf
  namespace: lewaf
  labels:
    app: lewaf
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
spec:
  type: ClusterIP
  selector:
    app: lewaf
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
    - name: metrics
      port: 9090
      targetPort: metrics
      protocol: TCP
  sessionAffinity: None
---
apiVersion: v1
kind: Service
metadata:
  name: lewaf-headless
  namespace: lewaf
  labels:
    app: lewaf
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app: lewaf
  ports:
    - name: http
      port: 8000
      targetPort: http
      protocol: TCP
